* Preferences: Fix hints are not visible for tabs with scrollbar

--- a/preferences/templates/pixelegg/app.less
+++ b/preferences/templates/pixelegg/app.less
@@ -56,10 +56,9 @@ tr.prefRow > td {
     display: none;
     width: 250px;
     max-height: 99%;
-    height: 97%;
+    height: ~"calc(97% - 150px)";
     padding: 5px;
-    margin-top: -4px;
-    top: 0;
+    top: 100px;
 	z-index: 1;
 	border: 2px solid dimgrey;
     border-radius: 5px;
